--- a/app/src/main/res/layout/activity_appliances.xml
+++ b/app/src/main/res/layout/activity_appliances.xml
@@ -39,75 +39,83 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/habitat_information"
+            android:textStyle="bold"
             android:textSize="20sp"
             android:paddingVertical="15dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/joli_vert"
             android:layout_marginStart="29dp">
         </TextView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="50dp">
-
-                <ImageView
-                    android:layout_width="43dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/img_flooor"
-                    android:layout_gravity="center_vertical"/>
-                <Spinner
-                    android:id="@+id/floor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:spinnerMode="dropdown"/>
-                <EditText
-                    android:id="@+id/editTextArea"
-                    android:inputType="number"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/area"
-                    android:textColorHint="@android:color/darker_gray"
-                    android:textColor="@android:color/darker_gray"
-                    android:backgroundTint="@android:color/darker_gray"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/appliancesContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="16dp"
-                android:gravity="center"/>
-            <Button
-                android:id="@+id/btnAddAppliance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/add_appliance"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/rect2"
-                android:paddingHorizontal="10dp"
-                android:textColor="@color/white"
-                android:layout_gravity="center"/>
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:paddingBottom="20dp"
+                android:gravity="center">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingBottom="50dp">
+
+                    <ImageView
+                        android:layout_width="43dp"
+                        android:layout_height="36dp"
+                        android:src="@drawable/img_flooor"
+                        android:layout_gravity="center_vertical"/>
+                    <Spinner
+                        android:id="@+id/floor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:spinnerMode="dropdown"/>
+                    <EditText
+                        android:id="@+id/editTextArea"
+                        android:inputType="number"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/area"
+                        android:textColorHint="@android:color/darker_gray"
+                        android:textColor="@android:color/darker_gray"
+                        android:backgroundTint="@android:color/darker_gray"/>
+
+                </LinearLayout>
 
 
-            <Button
-                android:id="@+id/btnSignup"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_up"
-                android:background="@drawable/rect"
-                android:textSize="20sp"
-                android:textColor="#FFFF"
-                android:layout_gravity="center"/>
+                    <LinearLayout
+                        android:id="@+id/appliancesContainer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginBottom="16dp"
+                        android:layout_gravity="center"
+                        android:gravity="center"/>
+                    <Button
+                        android:id="@+id/btnAddAppliance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/add_appliance"
+                        android:layout_marginBottom="20dp"
+                        android:background="@drawable/rect2"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/white"
+                        android:layout_gravity="center"/>
 
-        </LinearLayout>
+                    <Button
+                        android:id="@+id/btnSignup"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sign_up"
+                        android:background="@drawable/rect"
+                        android:textSize="20sp"
+                        android:textColor="#FFFF"
+                        android:layout_gravity="center"/>
+
+            </LinearLayout>
+    </ScrollView>
 </LinearLayout>
